# magnus-dp

./: .gitignore  CMakeLists.txt  README.md  build.sh  gen_nodes.py  interp.h  mag_dispatch.h  mag_impl.h  main  main.cpp  pyproject.toml  run_tests.sh
demo/: bench.py  bench_jax.py
demo/magnus/: __init__.py  __init__.pyi  jax.py  jax.pyi
demo/tests/: test_python_api.py
src/: backendcomposer.cpp  backendcomposer.hpp  dispatch.hpp  dispatcher.hpp  gaussLegendre.cpp  gaussLegendre.hpp  gausslegendre.cpp  gausslegendre.hpp  grad.hpp  graddata.hpp  integrate.cpp  integrate.hpp  integratebackends.hpp  jax_ffi.cpp  magnus.hpp  main.cpp  matrix.hpp  matrixbackends.hpp  memorybuffer.hpp  python.cpp  util.hpp
src/api/: jax_ffi.cpp  pybind.cpp  python.cpp  typing_gen.cpp
src/api/magnus/: __init__.py  __init__.pyi  jax.py  jax.pyi
src/composer/: backends.cpp  backends.hpp  dispatch.hpp
src/dispatch_codegen/: axis.py  manual_impls.hpp  spec.yaml
src/integration/: backends.hpp  boole.hpp  default.hpp  integrate.hpp  integratebackends.hpp  simpson.hpp  trapezoid.hpp
src/linalg/: backends.hpp  blas.hpp  fixed.hpp  generic.hpp  manual.hpp  matrix.hpp  matrixbackends.hpp  spacecurve.hpp
src/mem/: memorybuffer.hpp
src/util/: extra.hpp  gausslegendre.hpp  gausslegendre_backends.hpp  gen_nodes.py
test/: imports.py
test/magnus/: __init__.py  __init__.pyi
tests/: bench.py  bench_jax.py  test_jax_vjp.py  test_python_api.py
